Working docker processor
Along with the 'omero-process' docker image, this
change will allow launching scripts in a docker container.
What's required at this stage is setting omero.process.python
to omero.processor.DockerProcessI

Host name lookup from within the container is also not optimal.

Conflicts:
	components/tools/OmeroPy/src/omero/processor.py
	etc/omero.properties

--- a/etc/omero.properties
+++ b/etc/omero.properties
@@ -117,6 +117,14 @@ omero.process.python=omero.processor.ProcessI
 omero.process.jython=omero.processor.ProcessI
 omero.process.matlab=omero.processor.MATLABProcessI
 
+# In order to use docker, set:
+# omero.process.python=omero.processor.DockerProcessI
+# and optionally modify the following:
+omero.process.docker.host=172.17.42.1
+omero.process.docker.image=omero-process
+omero.process.docker.url=unix://var/run/docker.sock
+omero.process.docker.version=1.9
+
 #############################################
 ## JVM configuration
 ##
@@ -198,6 +206,7 @@ omero.metrics.slf4j_minutes=60
 
 # Polling frequency of the pixeldata processing. Set empty to disable
 # pixeldata processing.
+
 #
 # .. |cron| replace::
 #   Cron Format: seconds minutes hours day-of-month month day-of-week year
