Fix stupid typo in search.include_types

--- a/etc/omero.properties
+++ b/etc/omero.properties
@@ -171,7 +171,7 @@ omero.search.event_log_loader=eventLogQueue
 ##
 omero.search.max_partition_size=1000000
 omero.search.include_types=ome.model.core.Image,ome.model.containers.Project,\
-ome.model.containers.Dataset,ome.model.screens.Plate,ome.model.screens.Screen
+ome.model.containers.Dataset,ome.model.screen.Plate,ome.model.screen.Screen
 omero.search.include_actions=INSERT,UPDATE,REINDEX,DELETE
 
 
