cmake: Filter warnings used by Ice headers

--- a/components/tools/OmeroCpp/CMakeLists.txt
+++ b/components/tools/OmeroCpp/CMakeLists.txt
@@ -423,14 +423,9 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/omero-client-config.cmake
 add_subdirectory(test)
 add_subdirectory(utils)
 
-# Disable a number of GCC warnings and leave the rest as failures
-# To guarantee that no others are being generated, use CXXFLAGS=-Werror
-#
-# Goal is to have the equivalent of:
-#
-if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-  set(ICE_FLAGS "-Wno-switch-default -Wno-redundant-decls -Wno-overloaded-virtual -Wno-old-style-cast -Wno-deprecated-declarations")
-endif()
+string(REPLACE " " ";" ICE_FLAG_LIST "${CMAKE_CXX_FLAGS}")
+list(REMOVE_ITEM ICE_FLAG_LIST -Wswitch-default -Wredundant-decls -Woverloaded-virtual -Wold-style-cast -Wdeprecated-declarations)
+string(REPLACE ";" " " ICE_FLAGS "${ICE_FLAG_LIST}")
 
 if(fatal-warnings)
   add_definitions("-Werror")
